--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 <div class="container">
     <section class="main-container">
         <nav>
-            <button id="left" type="button" class="btn"><img id="left-image" src="images/ic_menu.svg" /></button>
+            <button id="left" type="button" class="btn collapse"><img id="left-image" src="images/ic_menu.svg" /></button>
             <button type="button" class="btn" disabled><img src="images/pixel.png" /></button>
             <h1 id="title"></h1>
-            <button id="right-0" type="button" class="btn float-end"><img id="right-0-image" src="images/ic_add_field.svg" /></button>
-            <button id="right-1" type="button" class="btn float-end"><img id="right-1-image" src="images/ic_add_group.svg" /></button>
+            <button id="right-0" type="button" class="btn collapse float-end"><img id="right-0-image" src="images/ic_add_field.svg" /></button>
+            <button id="right-1" type="button" class="btn collapse float-end"><img id="right-1-image" src="images/ic_add_group.svg" /></button>
         </nav>
 
         <div class="m-3">
