fix: icon name on index.html

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                     <button id="left-0" type="button" class="btn collapse"><img id="left-image-0" src="/images/ic_menu.svg" /></button>
                     <button id="left-1" type="button" class="btn collapse" disabled><img id="left-image-1" src="/images/pixel.png" /></button>
                     <h1 id="title"></h1>
-                    <button id="right-0" type="button" class="btn collapse float-end"><img id="right-0-image" src="/images/ic_add_field.svg" /></button>
-                    <button id="right-1" type="button" class="btn collapse float-end"><img id="right-1-image" src="/images/ic_add_group.svg" /></button>
+                    <button id="right-0" type="button" class="btn collapse float-end"><img id="right-image-0" src="/images/ic_add_field.svg" /></button>
+                    <button id="right-1" type="button" class="btn collapse float-end"><img id="right-image-1" src="/images/ic_add_group.svg" /></button>
                 </nav>
 
                 <div class="m-3">
