feat: add grup-detail page and update ti bootstrap 5.3.7

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
-    <link href="/lib/bootstrap-5.3.6-dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/lib/bootstrap-5.3.7-dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="/css/style.css" rel="stylesheet">
 </head>
     <body>
@@ -29,11 +29,11 @@
         <div class="container">
             <section class="main-container">
                 <nav>
-                    <button id="left-0" type="button" class="btn collapse"><img id="left-image-0" src="/images/ic_menu.svg" /></button>
-                    <button id="left-1" type="button" class="btn collapse" disabled><img id="left-image-1" src="/images/pixel.png" /></button>
+                    <button id="left-0" type="button" class="btn collapse"><img id="left-image-0" src="/images/ic_menu.svg"  alt="Button for open menu"/></button>
+                    <button id="left-1" type="button" class="btn collapse" disabled><img id="left-image-1" src="/images/pixel.png" alt="Empty space"/></button>
                     <h1 id="title"></h1>
-                    <button id="right-0" type="button" class="btn collapse float-end"><img id="right-image-0" src="/images/ic_add_field.svg" /></button>
-                    <button id="right-1" type="button" class="btn collapse float-end"><img id="right-image-1" src="/images/ic_add_group.svg" /></button>
+                    <button id="right-0" type="button" class="btn collapse float-end"><img id="right-image-0" src="/images/ic_add_field.svg" alt="Button for create new field" /></button>
+                    <button id="right-1" type="button" class="btn collapse float-end"><img id="right-image-1" src="/images/ic_add_group.svg" alt="Button for create new group"/></button>
                 </nav>
 
                 <div class="m-3">
@@ -43,7 +43,6 @@
             </section>
         </div>
         <script type="module" src="/js/pocket.mjs"></script>
-        <script src="/lib/bootstrap-5.3.6-dist/js/bootstrap.min.js"></script>
-
+        <script src="/lib/bootstrap-5.3.7-dist/js/bootstrap.min.js"></script>
     </body>
 </html>
