feat: develop group detail page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
   <link href="/lib/bootstrap-5.3.7-dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="/css/style.css" rel="stylesheet">
-  <script src="js/default.js"></script>
+  <script src="js/extensions.js"></script>
 </head>
 <body>
 
