feat: adn implementation GUI menu

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 
     <div class="menu" id="side-menu">
       <ul>
+        <li class="d-flex justify-content-center align-items-center mt-1 mb-1"><img src="/images/ic_pocket.svg" alt="Pocket 5 logo"></li>
+        <li class="d-flex justify-content-center align-items-center mt-1 mb-1"><h5>Pocket 5</h5></li>
         <li><a href="#"><img class="ico me-1" src="/images/ic_passwd.svg" alt="Change passwd icon">Change passwd</a></li>
         <li><a href="#"><img class="ico me-1" src="/images/ic_import.svg" alt="Import data icon">Import data</a></li>
         <li><a href="#"><img class="ico me-1" src="/images/ic_export.svg" alt="Import data icon">Export data</a></li>
