feat: start to develop menu functions

--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
       <ul>
         <li class="d-flex justify-content-center align-items-center mt-1 mb-1"><img src="/images/ic_pocket.svg" alt="Pocket 5 logo"></li>
         <li class="d-flex justify-content-center align-items-center mt-1 mb-1"><h5>Pocket 5</h5></li>
-        <li><a href="#"><img class="ico me-1" src="/images/ic_passwd.svg" alt="Change passwd icon">Change passwd</a></li>
-        <li><a href="#"><img class="ico me-1" src="/images/ic_import.svg" alt="Import data icon">Import data</a></li>
-        <li><a href="#"><img class="ico me-1" src="/images/ic_export.svg" alt="Import data icon">Export data</a></li>
-        <li><a href="#"><img class="ico me-1" src="/images/ic_logout.svg" alt="Import data icon">Logout</a></li>
-        <li><a href="#"><img class="ico me-1" src="/images/ic_delete.svg" alt="Import data icon">Delete account</a></li>
+        <li><a href="#" id="change-passwd"><img class="ico me-1" src="/images/ic_passwd.svg" alt="Change passwd icon">Change passwd</a></li>
+        <li><a href="#" id="import-data"><img class="ico me-1" src="/images/ic_import.svg" alt="Import data icon">Import data</a></li>
+        <li><a href="#" id="export-data"><img class="ico me-1" src="/images/ic_export.svg" alt="Export data icon">Export data</a></li>
+        <li><a href="#" id="close-section"><img class="ico me-1" src="/images/ic_delete.svg" alt="Close section icon">Close section</a></li>
+        <li><a href="#" id="logout"><img class="ico me-1" src="/images/ic_logout.svg" alt="Logout icon">Logout</a></li>
       </ul>
     </div>
 
