--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 
     <div class="menu" id="side-menu">
       <ul>
-        <li class="d-flex justify-content-center align-items-center mt-1 mb-1"><img src="/images/ic_pocket.svg" alt="Pocket 5 logo"></li>
-        <li class="d-flex justify-content-center align-items-center mt-1 mb-1"><h5>Pocket 5</h5></li>
+        <li class="mt-1 mb-1"><img src="/images/ic_pocket.svg" alt="Pocket 5 logo" id="side-menu-logo"></li>
+        <li class="mt-1 mb-1"><h5 id="side-menu-title">Pocket 5</h5></li>
         <li><a href="#" id="import-data"><img class="ico me-1" src="/images/ic_import.svg" alt="Import data icon">Import data</a></li>
         <li><a href="#" id="export-data"><img class="ico me-1" src="/images/ic_export.svg" alt="Export data icon">Export data</a></li>
         <li><a href="#" id="change-passwd"><img class="ico me-1" src="/images/ic_passwd.svg" alt="Change passwd icon">Change passwd</a></li>
@@ -59,7 +59,7 @@
 
     <div class="m-3" id="content">
       <main id="context"></main>
-      <div id="alert" class="alert alert-danger d-flex align-items-center visually-hidden" role="alert"></div>
+      <div id="alert" class="alert alert-danger d-flex align-items-center visually-hidden mt-3" role="alert"></div>
     </div>
   </section>
 </div>
