feat: developed logout and delete session

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="/lib/bootstrap-5.3.8-dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="/css/style.css" rel="stylesheet">
   <link href="/css/menu.css" rel="stylesheet">
-  <script src="js/extensions.js"></script>
+  <script src="js/extensions.mjs"></script>
 </head>
 <body>
 
@@ -52,7 +52,7 @@
         <li><a href="#" id="import-data"><img class="ico me-1" src="/images/ic_import.svg" alt="Import data icon">Import data</a></li>
         <li><a href="#" id="export-data"><img class="ico me-1" src="/images/ic_export.svg" alt="Export data icon">Export data</a></li>
         <li><a href="#" id="change-passwd"><img class="ico me-1" src="/images/ic_passwd.svg" alt="Change passwd icon">Change passwd</a></li>
-        <li><a href="#" id="close-session"><img class="ico me-1" src="/images/ic_delete.svg" alt="Close session icon">Close session</a></li>
+        <li><a href="#" id="delete-session"><img class="ico me-1" src="/images/ic_delete.svg" alt="Delete session icon">Delete session</a></li>
         <li><a href="#" id="logout"><img class="ico me-1" src="/images/ic_logout.svg" alt="Logout icon">Logout</a></li>
       </ul>
     </div>
