--- a/index.html
+++ b/index.html
@@ -18,22 +18,52 @@
   </div>
 </div>
 
-
-<div class="modal fade" id="modal" tabindex="-1" aria-labelledby="modal-label" aria-hidden="true">
+<div class="modal fade" tabindex="-1" aria-labelledby="modal-label" aria-hidden="true" id="modal">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="modal-label"></h5>
-        <button id="modal-header-close" type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="modal-header-close"></button>
       </div>
       <div id="modal-body" class="modal-body"></div>
       <div class="modal-footer">
-        <button id="modal-close" type="button" class="btn btn-secondary" data-bs-dismiss="modal"></button>
-        <button id="modal-confirm" type="button" class="btn btn-primary" data-bs-dismiss="modal"></button>
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" id="modal-close"></button>
+        <button type="button" class="btn btn-primary" data-bs-dismiss="modal" id="modal-confirm"></button>
       </div>
     </div>
   </div>
 </div>
+
+<div class="modal fade modal-xl" tabindex="-1" id="modal-upload">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Upload configuration file</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal-dialog" aria-label="Close" id="modal-upload-header-close"></button>
+      </div>
+      <div class="modal-body">
+        <p>Upload the new data file exported.</p>
+        <div class="alert alert-warning d-flex align-items-center" role="alert">
+          <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Warning:">
+            <use xlink:href="#exclamation-triangle-fill" />
+          </svg>
+          <div>
+            All old data will be overwritten.
+          </div>
+        </div>
+        <div class="mb-3">
+          <label for="form-file" class="form-label">Default file input example</label>
+          <input class="form-control" type="file" id="form-file">
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" id="modal-upload-close" class="btn btn-secondary" data-bs-dismiss="modal-upload">Close</button>
+        <button type="button" id="modal-upload-confirm" class="btn btn-primary" data-bs-dismiss="modal-upload">Confirm</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 
 <div class="container">
   <section class="main-container">
