feat: enhance input validation and sanitization across multiple views

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   <link href="/css/style.css" rel="stylesheet">
   <link href="/css/menu.css" rel="stylesheet">
   <script src="js/extensions.mjs"></script>
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self';">
+  <meta http-equiv="X-Content-Type-Options" content="nosniff">
+  <meta http-equiv="X-Frame-Options" content="DENY">
+  <meta http-equiv="X-XSS-Protection" content="1; mode=block">
+  <meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin">
 </head>
 <body>
 
