feat: enhance registration form validation and improve user feedback

--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
   <link href="/css/style.css" rel="stylesheet">
   <link href="/css/menu.css" rel="stylesheet">
   <script src="js/extensions.mjs"></script>
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self';">
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data:;">
   <meta http-equiv="X-Content-Type-Options" content="nosniff">
-  <meta http-equiv="X-Frame-Options" content="DENY">
   <meta http-equiv="X-XSS-Protection" content="1; mode=block">
   <meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin">
 </head>
@@ -23,7 +22,7 @@
   </div>
 </div>
 
-<div class="modal fade" tabindex="-1" aria-labelledby="modal-label" aria-hidden="true" id="modal">
+<div class="modal fade" tabindex="-1" aria-labelledby="modal-label" id="modal">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
